<resources>
    <string name="app_name">Todo</string>

    <string name="action_settings">Configurações</string>
    <string name="action_about">Sobre</string>
    <string name="action_save">Salvar</string>
    <string name="action_delete">Apagar</string>
    <string name="action_archive">Arquivar</string>

    <!-- New To-Do  -->
    <string name="title">Título</string>
    <string name="description">Descrição</string>
    <string name="date">Data</string>
    <string name="hour">Hora</string>
    <string name="save">Gravar</string>
    <string name="cancel">Cancelar</string>
    <string name="done">Tarefa concluída</string>
    <string name="important">Tarefa importante</string>
    <string name="archived">Tarefa arquivada!</string>

    <!--Mensagens -->
    <string name="tarefas_perdidas">ToDo: alertas perdidos</string>
    <string name="mensagem_tarefas_perdidas">Você perdeu alertas de novas tarefas</string>
    <string name="undo">Desfazer</string>
    <string name="tarefa_done">Tarefa marcada como concluída!</string>
    <string name="tarefa_archived">Tarefa arquivada!</string>
    <string name="confirm_delete">Confirma Exclusão</string>
    <string name="confirm_archive">Confirma Arquivamento</string>
    <string name="confirm_delete_message">Confirma a exclusão da tarefa: \n %1$s \n %2$s ?</string>
    <string name="confirm_archive_message">Confirma o arquivamento da tarefa: \n %1$s \n %2$s ?</string>

    <!--Mensagens de Erro-->
    <string name="errorTitle">Informe o título!</string>
    <string name="errorDescription">Informe a descrição!</string>
    <string name="errorDate">Informe a Data!</string>
    <string name="errorTime">Informe a hora!</string>

    <!-- Mensagens de Sucesso -->
    <string name="savedTodo">Tarefa salva com sucesso!</string>
    <string name="deletedTodo">Tarefa apagada com sucesso!</string>

    <!-- HINTS -->
    <string name="titleHint">Informe um título</string>
    <string name="descriptionHint">Informe a descrição da tarefa</string>

    <!-- Menu -->
    <string name="show_all">Todas</string>
    <string name="show_done">Concluídas</string>
    <string name="show_archived">Arquivadas</string>
    <string name="show_undone">Não concluídas</string>

    <string-array name="filtro_tarefas">
        <item>Todas</item>
        <item>Arquivadas</item>
        <item>Concluídas</item>
        <item>Importantes</item>
        <item>Não concluídas</item>
    </string-array>

</resources>
