<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".TodoListActivity">

    <item android:id="@+id/show_all" android:title="@string/show_all" app:showAsAction="always"/>
    <menu>
        <item android:id="@+id/show_undone" android:title="@string/show_undone" />
        <item android:id="@+id/show_done" android:title="@string/show_done" />
        <item android:id="@+id/show_archived" android:title="@string/show_archived" />
    </menu>


    <item android:id="@+id/action_about" android:title="@string/action_about"
        android:orderInCategory="101" app:showAsAction="never"/>
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

</menu>