<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_todo" tools:context=".TodoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:id="@+id/textViewTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextTitle"
        android:layout_below="@+id/textViewTitle"
        android:hint="@string/titleHint"
        android:textColorHint="@color/colorSecondaryText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:id="@+id/textViewDescription"
        android:layout_below="@+id/editTextTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editTextTitle"
        android:layout_alignEnd="@+id/editTextTitle" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editTextDescription"
        android:layout_below="@+id/textViewDescription"
        android:hint="@string/descriptionHint"
        android:textColorHint="@color/colorSecondaryText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textViewDescription"
        android:layout_alignEnd="@+id/textViewDescription" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editTextDate"
        android:layout_below="@+id/editTextDescription"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/buttonDate"
        android:layout_toStartOf="@+id/buttonDate" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:id="@+id/buttonDate"
        android:drawableLeft="@android:drawable/ic_menu_my_calendar"
        android:drawableStart="@android:drawable/ic_menu_my_calendar"
        android:layout_alignBottom="@+id/editTextDate"
        android:layout_alignRight="@+id/editTextDescription"
        android:layout_alignEnd="@+id/editTextDescription" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/editTextTime"
        android:layout_below="@+id/editTextDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/buttonTime"
        android:layout_toStartOf="@+id/buttonTime" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hour"
        android:id="@+id/buttonTime"
        android:drawableLeft="@android:drawable/ic_lock_idle_alarm"
        android:drawableStart="@android:drawable/ic_lock_idle_alarm"
        android:layout_alignBottom="@+id/editTextTime"
        android:layout_alignRight="@+id/buttonDate"
        android:layout_alignEnd="@+id/buttonDate" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextTime"
        android:text="@string/important"
        android:id="@+id/checkBoxImportant"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:id="@+id/checkBoxDone"
        android:layout_below="@+id/checkBoxImportant"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="false" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/buttonSave"
        android:drawableLeft="@android:drawable/ic_menu_save"
        android:drawableStart="@android:drawable/ic_menu_save"
        android:onClick="saveToDo"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

</RelativeLayout>
